--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -53,7 +53,21 @@
    "id": "10b9210f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def fib(n):\n",
+    "    \"\"\"Return the nth Fibonacci number.\"\"\"\n",
+    "    if n <= 0:\n",
+    "        return \"Input should be a positive integer.\"\n",
+    "    elif n == 1:\n",
+    "        return 0\n",
+    "    elif n == 2:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        a, b = 0, 1\n",
+    "        for _ in range(2, n):\n",
+    "            a, b = b, a + b\n",
+    "        return b"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,7 +93,13 @@
    "id": "eb033460",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def to_binary(n):\n",
+    "    \"\"\"Convert a decimal number to its binary representation.\"\"\"\n",
+    "    if n < 0:\n",
+    "        return \"Input should be a non-negative integer.\"\n",
+    "    return bin(n).replace(\"0b\", \"\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,8 +127,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5993ce51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date_in</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>disease</th>\n",
+       "      <th>profession</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>children</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1847-04-17</td>\n",
+       "      <td>Mary</td>\n",
+       "      <td>Gallagher</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>recent emigrant</td>\n",
+       "      <td>married</td>\n",
+       "      <td>w</td>\n",
+       "      <td>Child Alana 10 days</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1847-04-08</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Sanin (?)</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>recent emigrant</td>\n",
+       "      <td>laborer</td>\n",
+       "      <td>m</td>\n",
+       "      <td>Catherine 2 mo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1847-04-17</td>\n",
+       "      <td>Anthony</td>\n",
+       "      <td>Clark</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>recent emigrant</td>\n",
+       "      <td>laborer</td>\n",
+       "      <td>m</td>\n",
+       "      <td>Charles Riley afed 10 days</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1847-04-08</td>\n",
+       "      <td>Lawrence</td>\n",
+       "      <td>Feeney</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>recent emigrant</td>\n",
+       "      <td>laborer</td>\n",
+       "      <td>m</td>\n",
+       "      <td>Child</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1847-04-13</td>\n",
+       "      <td>Henry</td>\n",
+       "      <td>Joyce</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>recent emigrant</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>m</td>\n",
+       "      <td>Child 1 mo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      date_in first_name  last_name   age          disease profession gender  \\\n",
+       "0  1847-04-17       Mary  Gallagher  28.0  recent emigrant    married      w   \n",
+       "1  1847-04-08       John  Sanin (?)  19.0  recent emigrant    laborer      m   \n",
+       "2  1847-04-17    Anthony      Clark  60.0  recent emigrant    laborer      m   \n",
+       "3  1847-04-08   Lawrence     Feeney  32.0  recent emigrant    laborer      m   \n",
+       "4  1847-04-13      Henry      Joyce  21.0  recent emigrant        NaN      m   \n",
+       "\n",
+       "                     children  \n",
+       "0         Child Alana 10 days  \n",
+       "1              Catherine 2 mo  \n",
+       "2  Charles Riley afed 10 days  \n",
+       "3                       Child  \n",
+       "4                  Child 1 mo  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "url = 'https://github.com/melaniewalsh/Intro-Cultural-Analytics/raw/master/book/data/bellevue_almshouse_modified.csv'\n",
+    "\n",
+    "df_bellevue = pd.read_csv(url)\n",
+    "df_bellevue.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce01eb3c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -121,7 +269,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.11"
   }
  },
