updated with exercise 3

--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "5993ce51",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
        "4                  Child 1 mo  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,8 +255,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ce01eb3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['date_in', 'last_name', 'gender', 'first_name', 'age', 'profession', 'disease', 'children']\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing_count = df_bellevue.isnull().sum()\n",
+    "sorted_columns = missing_count.sort_values().index.tolist()\n",
+    "print(sorted_columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6810842f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Year  Total_Admissions\n",
+      "0  1846              3073\n",
+      "1  1847              6511\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_bellevue['date_in'] = pd.to_datetime(df_bellevue['date_in'])\n",
+    "df_bellevue['Year'] = df_bellevue['date_in'].dt.year\n",
+    "df_yearly = df_bellevue.groupby('Year').size().reset_index(name='Total_Admissions')\n",
+    "print(df_yearly)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b5c3ab93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  gender    avg_age\n",
+      "0      ?        NaN\n",
+      "1      g  59.000000\n",
+      "2      h  56.000000\n",
+      "3      m  31.813433\n",
+      "4      w  28.725162\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_age_by_gender = df_bellevue.groupby('gender')['age'].mean().reset_index(name='avg_age')\n",
+    "print(avg_age_by_gender)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "26515c9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['laborer', 'married', 'spinster', 'widow', 'shoemaker']\n"
+     ]
+    }
+   ],
+   "source": [
+    "top5_professions = df_bellevue['profession'].value_counts().head(5).index.tolist()\n",
+    "print(top5_professions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2689914",
    "metadata": {},
    "outputs": [],
    "source": []
